Fixed overlapping issue in dashboard and UIN services dashboard

--- a/resident-ui/src/app/feature/dashboard/dashboard/dashboard.component.css
+++ b/resident-ui/src/app/feature/dashboard/dashboard/dashboard.component.css
@@ -21,9 +21,11 @@
   padding: 10px;
 }
 
+
+
 .grid-container>div {
   background-color: rgba(255, 255, 255, 0.8);
-  padding: 10px 30px;
+  padding: 10px 20px;
   font-size: 30px;
 }
 
